src/command_parser/Grammar/commandParser.py
# Generated from command.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class commandParser ( Parser ):

    grammarFileName = "command.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'&&'", "'||'", "';'", "'|'", 
                     "'''", "'\"'", "'`'" ]

    symbolicNames = [ "<INVALID>", "LANGLE", "RANGLE", "DOUBLE_AMPHERSAND", 
                      "DOUBLE_PIPE", "SEMICOLON", "PIPE", "SINGLEQUOTE", 
                      "DOUBLEQUOTE", "BACKQUOTE", "WHITESPACE", "NEWLINE", 
                      "UNQUOTED", "NONKEYWORD", "DQCONTENT", "BQCONTENT", 
                      "SQCONTENT" ]

    RULE_command_eof_nl = 0
    RULE_command = 1
    RULE_pipe = 2
    RULE_call = 3
    RULE_atom = 4
    RULE_argument = 5
    RULE_redirection = 6
    RULE_pipe_op = 7
    RULE_semicolon = 8
    RULE_double_amphersand = 9
    RULE_double_pipe = 10
    RULE_whitespace = 11
    RULE_unquoted = 12
    RULE_quoted = 13
    RULE_single_quoted = 14
    RULE_back_quoted = 15
    RULE_double_quoted = 16

    ruleNames =  [ "command_eof_nl", "command", "pipe", "call", "atom", 
                   "argument", "redirection", "pipe_op", "semicolon", "double_amphersand", 
                   "double_pipe", "whitespace", "unquoted", "quoted", "single_quoted", 
                   "back_quoted", "double_quoted" ]

    EOF = Token.EOF
    LANGLE=1
    RANGLE=2
    DOUBLE_AMPHERSAND=3
    DOUBLE_PIPE=4
    SEMICOLON=5
    PIPE=6
    SINGLEQUOTE=7
    DOUBLEQUOTE=8
    BACKQUOTE=9
    WHITESPACE=10
    NEWLINE=11
    UNQUOTED=12
    NONKEYWORD=13
    DQCONTENT=14
    BQCONTENT=15
    SQCONTENT=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Command_eof_nlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(commandParser.CommandContext,0)


        def EOF(self):
            return self.getToken(commandParser.EOF, 0)

        def NEWLINE(self):
            return self.getToken(commandParser.NEWLINE, 0)

        def getRuleIndex(self):
            return commandParser.RULE_command_eof_nl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand_eof_nl" ):
                listener.enterCommand_eof_nl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand_eof_nl" ):
                listener.exitCommand_eof_nl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand_eof_nl" ):
                return visitor.visitCommand_eof_nl(self)
            else:
                return visitor.visitChildren(self)




    def command_eof_nl(self):

        localctx = commandParser.Command_eof_nlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command_eof_nl)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.command(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.command(0)
                self.state = 36
                self.match(commandParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.command(0)
                self.state = 39
                self.match(commandParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(commandParser.CallContext,0)


        def pipe(self):
            return self.getTypedRuleContext(commandParser.PipeContext,0)


        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.CommandContext)
            else:
                return self.getTypedRuleContext(commandParser.CommandContext,i)


        def semicolon(self):
            return self.getTypedRuleContext(commandParser.SemicolonContext,0)


        def double_amphersand(self):
            return self.getTypedRuleContext(commandParser.Double_amphersandContext,0)


        def double_pipe(self):
            return self.getTypedRuleContext(commandParser.Double_pipeContext,0)


        def getRuleIndex(self):
            return commandParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)



    def command(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = commandParser.CommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_command, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 44
                self.call()
                pass

            elif la_ == 2:
                self.state = 45
                self.pipe(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 60
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = commandParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 48
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 49
                        self.semicolon()
                        self.state = 50
                        self.command(5)
                        pass

                    elif la_ == 2:
                        localctx = commandParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 52
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 53
                        self.double_amphersand()
                        self.state = 54
                        self.command(4)
                        pass

                    elif la_ == 3:
                        localctx = commandParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 56
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 57
                        self.double_pipe()
                        self.state = 58
                        self.command(3)
                        pass

             
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.CallContext)
            else:
                return self.getTypedRuleContext(commandParser.CallContext,i)


        def pipe_op(self):
            return self.getTypedRuleContext(commandParser.Pipe_opContext,0)


        def pipe(self):
            return self.getTypedRuleContext(commandParser.PipeContext,0)


        def getRuleIndex(self):
            return commandParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipe" ):
                return visitor.visitPipe(self)
            else:
                return visitor.visitChildren(self)



    def pipe(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = commandParser.PipeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_pipe, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.call()
            self.state = 67
            self.pipe_op()
            self.state = 68
            self.call()
            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = commandParser.PipeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipe)
                    self.state = 70
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 71
                    self.pipe_op()
                    self.state = 72
                    self.call() 
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(commandParser.ArgumentContext,0)


        def whitespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.WhitespaceContext)
            else:
                return self.getTypedRuleContext(commandParser.WhitespaceContext,i)


        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(commandParser.RedirectionContext,i)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.AtomContext)
            else:
                return self.getTypedRuleContext(commandParser.AtomContext,i)


        def getRuleIndex(self):
            return commandParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = commandParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 79
                    self.whitespace()
                    self.state = 82 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1 or _la==2:
                    self.state = 84
                    self.redirection()
                    self.state = 86 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 85
                        self.whitespace()
                        self.state = 88 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==10):
                            break

                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 95
                self.argument()
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 97 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 96
                            self.whitespace()
                            self.state = 99 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==10):
                                break

                        self.state = 101
                        self.atom() 
                    self.state = 107
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 109 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 108
                        self.whitespace()

                    else:
                        raise NoViableAltException(self)
                    self.state = 111 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 113
                    self.whitespace()
                    self.state = 116 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1 or _la==2:
                    self.state = 118
                    self.redirection()
                    self.state = 120 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 119
                        self.whitespace()
                        self.state = 122 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==10):
                            break

                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self.argument()
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 131 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 130
                            self.whitespace()
                            self.state = 133 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==10):
                                break

                        self.state = 135
                        self.atom() 
                    self.state = 141
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1 or _la==2:
                    self.state = 142
                    self.redirection()
                    self.state = 144 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 143
                        self.whitespace()
                        self.state = 146 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==10):
                            break

                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 153
                self.argument()
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 155 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 154
                            self.whitespace()
                            self.state = 157 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==10):
                                break

                        self.state = 159
                        self.atom() 
                    self.state = 165
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                self.state = 167 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 166
                        self.whitespace()

                    else:
                        raise NoViableAltException(self)
                    self.state = 169 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1 or _la==2:
                    self.state = 171
                    self.redirection()
                    self.state = 173 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 172
                        self.whitespace()
                        self.state = 175 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==10):
                            break

                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 182
                self.argument()
                self.state = 192
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 184 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 183
                            self.whitespace()
                            self.state = 186 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==10):
                                break

                        self.state = 188
                        self.atom() 
                    self.state = 194
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(commandParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(commandParser.ArgumentContext,0)


        def getRuleIndex(self):
            return commandParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = commandParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 199
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.redirection()
                pass
            elif token in [7, 8, 9, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 198
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.QuotedContext)
            else:
                return self.getTypedRuleContext(commandParser.QuotedContext,i)


        def unquoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.UnquotedContext)
            else:
                return self.getTypedRuleContext(commandParser.UnquotedContext,i)


        def getRuleIndex(self):
            return commandParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = commandParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 203
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [7, 8, 9]:
                        self.state = 201
                        self.quoted()
                        pass
                    elif token in [12]:
                        self.state = 202
                        self.unquoted()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 205 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,28,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(commandParser.LANGLE, 0)

        def argument(self):
            return self.getTypedRuleContext(commandParser.ArgumentContext,0)


        def whitespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(commandParser.WhitespaceContext)
            else:
                return self.getTypedRuleContext(commandParser.WhitespaceContext,i)


        def RANGLE(self):
            return self.getToken(commandParser.RANGLE, 0)

        def getRuleIndex(self):
            return commandParser.RULE_redirection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirection" ):
                listener.enterRedirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirection" ):
                listener.exitRedirection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirection" ):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)




    def redirection(self):

        localctx = commandParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 227
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,31,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.match(commandParser.LANGLE)
                self.state = 209 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 208
                    self.whitespace()
                    self.state = 211 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                self.state = 213
                self.argument()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 215
                self.match(commandParser.RANGLE)
                self.state = 217 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 216
                    self.whitespace()
                    self.state = 219 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                self.state = 221
                self.argument()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 223
                self.match(commandParser.LANGLE)
                self.state = 224
                self.argument()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 225
                self.match(commandParser.RANGLE)
                self.state = 226
                self.argument()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pipe_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self):
            return self.getToken(commandParser.PIPE, 0)

        def getRuleIndex(self):
            return commandParser.RULE_pipe_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe_op" ):
                listener.enterPipe_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe_op" ):
                listener.exitPipe_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipe_op" ):
                return visitor.visitPipe_op(self)
            else:
                return visitor.visitChildren(self)




    def pipe_op(self):

        localctx = commandParser.Pipe_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pipe_op)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 229
            self.match(commandParser.PIPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SemicolonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(commandParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return commandParser.RULE_semicolon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSemicolon" ):
                listener.enterSemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSemicolon" ):
                listener.exitSemicolon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSemicolon" ):
                return visitor.visitSemicolon(self)
            else:
                return visitor.visitChildren(self)




    def semicolon(self):

        localctx = commandParser.SemicolonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_semicolon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 231
            self.match(commandParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_amphersandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_AMPHERSAND(self):
            return self.getToken(commandParser.DOUBLE_AMPHERSAND, 0)

        def getRuleIndex(self):
            return commandParser.RULE_double_amphersand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDouble_amphersand" ):
                listener.enterDouble_amphersand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDouble_amphersand" ):
                listener.exitDouble_amphersand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDouble_amphersand" ):
                return visitor.visitDouble_amphersand(self)
            else:
                return visitor.visitChildren(self)




    def double_amphersand(self):

        localctx = commandParser.Double_amphersandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_double_amphersand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 233
            self.match(commandParser.DOUBLE_AMPHERSAND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_pipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_PIPE(self):
            return self.getToken(commandParser.DOUBLE_PIPE, 0)

        def getRuleIndex(self):
            return commandParser.RULE_double_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDouble_pipe" ):
                listener.enterDouble_pipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDouble_pipe" ):
                listener.exitDouble_pipe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDouble_pipe" ):
                return visitor.visitDouble_pipe(self)
            else:
